dlls_shell32_lib = shared_library('shell32', [
        #'appbar.c',
        #'assoc.c',
        #'autocomplete.c',
        #'brsfolder.c',
        #'changenotify.c',
        #'classes.c',
        #'clipboard.c',
        #'control.c',
        #'cpanelfolder.c',
        #'dataobject.c',
        #'dde.c',
        #'debughlp.c',
        #'dialogs.c',
        #'dragdrophelper.c',
        #'ebrowser.c',
        #'enumidlist.c',
        #'folders.c',
        #'iconcache.c',
        #'pidl.c',
        #'recyclebin.c',
        #'shell32_main.c',
        #'shelldispatch.c',
        #'shellitem.c',
        #'shelllink.c',
        #'shellole.c',
        #'shellord.c',
        #'shellpath.c',
        #'shellreg.c',
        #'shellstring.c',
        #'shfldr_desktop.c',
        #'shfldr_fs.c',
        #'shfldr_mycomp.c',
        #'shfldr_netplaces.c',
        #'shfldr_printers.c',
        #'shfldr_unixfs.c',
        #'shlexec.c',
        #'shlfileop.c',
        #'shlfolder.c',
        #'shlfsbind.c',
        #'shlmenu.c',
        #'shlview.c',
        #'shlview_cmenu.c',
        #'shpolicy.c',
        #'systray.c',
        #'trash.c',
        #'xdg.c',
    ],
    include_directories: [
        include_directories('.'),
    ],
    c_args: [
        '-D_SHELL32_',
    ],
    link_args: [
        '-Wl,--warn-unresolved-symbols',
    ],
    dependencies: [
        include_dep,
        libs_wine_dep,
        dlls_winecrt0_dep,
        dlls_ntdll_dep,
        dlls_kernel32_dep,
        dlls_advapi32_dep,
        dlls_gdi32_dep,
        dlls_user32_dep,
        dlls_version_dep,
        dlls_shlwapi_dep,
        dlls_ole32_dep,
    ],
)

dlls_shell32_dep = declare_dependency(
    link_with: dlls_shell32_lib,
)
