dlls_user32_lib = shared_library('winapi-user32', [
        'button.c',
        'caret.c',
        'class.c',
        'clipboard.c',
        'combo.c',
        'cursoricon.c',
        #'dde_client.c',
        #'dde_misc.c',
        #'dde_server.c',
        'defdlg.c',
        'defwnd.c',
        'desktop.c',
        'dialog.c',
        'driver.c',
        'edit.c',
        'exticon.c',
        'focus.c',
        'hook.c',
        'icontitle.c',
        'input.c',
        'listbox.c',
        'lstr.c',
        'mdi.c',
        'menu.c',
        'message.c',
        'message.cpp',
        'misc.c',
        'msgbox.c',
        'nonclient.c',
        'painting.c',
        'property.c',
        'resource.c',
        'scroll.c',
        'spy.c',
        'static.c',
        'sysparams.c',
        'text.c',
        'uitools.c',
        'user_main.c',
        'win.c',
        'win.cpp',
        #'winhelp.c',
        'winpos.c',
        'winproc.c',
        'winstation.c',
        'wsprintf.c',
    ],
    c_args: [
        '-D_USER32_',
    ],
    cpp_args: [
        '-D_USER32_',
    ],
    link_args: [
        #'-Wl,--warn-unresolved-symbols',
    ],
    dependencies: [
        include_dep,
        libs_wine_dep,
        dlls_winecrt0_dep,
        dlls_ntdll_dep,
        dlls_kernel32_dep,
        dlls_advapi32_dep,
        dlls_gdi32_dep,
        #dlls_version_dep,
        m_dep,
        gio_dep,
        qt5_dep,
    ],
    install: true,
)

dlls_user32_dep = declare_dependency(
    link_with: dlls_user32_lib,
)
